[gd_scene load_steps=16 format=3 uid="uid://cp8fllwg0m5kk"]

[ext_resource type="Script" path="res://zonejeu.gd" id="1_1no86"]
[ext_resource type="TileSet" uid="uid://i2gurbxbug2t" path="res://Ressources/Images/tileset_wip.tres" id="2_gaf4e"]
[ext_resource type="FontFile" uid="uid://dev8uh68b6uk" path="res://Ressources/Font/Faune-DisplayBoldItalic.otf" id="3_e4hnx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_npq7m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3pfds"]
bg_color = Color(0.403922, 0.403922, 0.403922, 0.686275)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_haxq8"]
bg_color = Color(0.117821, 0.618786, 0.127736, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7nn4h"]
bg_color = Color(0.894118, 0.0705882, 0.211765, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2kn6"]
bg_color = Color(0.862745, 0.776471, 0.0235294, 1)

[sub_resource type="Theme" id="Theme_hyxdw"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_3pfds")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_haxq8")
ProgressBarAlert/base_type = &"ProgressBar"
ProgressBarAlert/styles/fill = SubResource("StyleBoxFlat_7nn4h")
ProgressBarWarning/base_type = &"ProgressBar"
ProgressBarWarning/styles/fill = SubResource("StyleBoxFlat_n2kn6")

[sub_resource type="Animation" id="Animation_63pac"]
resource_name = "blink"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%HBox:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_a4lfm"]
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%HBox:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rqf2e"]
_data = {
"RESET": SubResource("Animation_a4lfm"),
"blink": SubResource("Animation_63pac")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_io48j"]
bg_color = Color(0.84, 0.80752, 0.3528, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.84, 0.669967, 0.588, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xyw22"]
bg_color = Color(0.84, 0.424103, 0.3528, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.84, 0.669967, 0.588, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2d7fp"]
bg_color = Color(0.3528, 0.392907, 0.84, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.84, 0.669967, 0.588, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ZoneJeu" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_1no86")

[node name="LayerGazon" type="TileMapLayer" parent="."]
position = Vector2(30, -24)
tile_set = ExtResource("2_gaf4e")

[node name="ZoneLevel" type="Node2D" parent="."]
position = Vector2(150, 40)

[node name="MarkerLevel" type="Marker2D" parent="ZoneLevel"]
unique_name_in_owner = true

[node name="DureeJeuTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 120.0
one_shot = true

[node name="PanelContainer" type="PanelContainer" parent="."]
top_level = true
offset_right = 1296.0
offset_bottom = 741.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_npq7m")

[node name="VBoxContainer1" type="VBoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.821789, 0.821789, 0.821789, 1)
theme_override_fonts/font = ExtResource("3_e4hnx")
theme_override_font_sizes/font_size = 36
text = "  Joueur 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainerCenter" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="HBox" type="HBoxContainer" parent="PanelContainer/VBoxContainerCenter"]
unique_name_in_owner = true
layout_mode = 2

[node name="LabelDuree" type="Label" parent="PanelContainer/VBoxContainerCenter/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_e4hnx")
theme_override_font_sizes/font_size = 36

[node name="ProgressBarDuree" type="ProgressBar" parent="PanelContainer/VBoxContainerCenter/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_vertical = 4
theme = SubResource("Theme_hyxdw")
step = 0.1
show_percentage = false

[node name="AnimationPlayerDuree" type="AnimationPlayer" parent="PanelContainer/VBoxContainerCenter"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_rqf2e")
}

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0.709804, 1)
theme_override_colors/font_shadow_color = Color(0.823529, 0.823529, 0.823529, 1)
theme_override_fonts/font = ExtResource("3_e4hnx")
theme_override_font_sizes/font_size = 36
text = "Joueur 2"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MissionAnchor" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/UI/MissionAnchor"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.0
offset_top = -70.0
offset_right = 71.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_io48j")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI/MissionAnchor/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/MissionAnchor/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/UI/MissionAnchor/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MISSION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/MissionAnchor/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label2" type="Label" parent="CanvasLayer/UI/MissionAnchor/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "ITEM"
horizontal_alignment = 2

[node name="Label3" type="Label" parent="CanvasLayer/UI/MissionAnchor/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "ITEM"
horizontal_alignment = 2

[node name="Label4" type="Label" parent="CanvasLayer/UI/MissionAnchor/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "ITEM"
horizontal_alignment = 2

[node name="Inventaire_J1" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/UI/Inventaire_J1"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -36.0
offset_right = 144.0
offset_bottom = 36.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xyw22")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI/Inventaire_J1/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox_J1" type="VBoxContainer" parent="CanvasLayer/UI/Inventaire_J1/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="Inventaire_J2" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/UI/Inventaire_J2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -36.0
offset_bottom = 36.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2d7fp")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI/Inventaire_J2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox_J2" type="VBoxContainer" parent="CanvasLayer/UI/Inventaire_J2/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="timeout" from="DureeJeuTimer" to="." method="_on_duree_jeu_timer_timeout"]
